--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -256,24 +256,31 @@
             color: $color__gray;
             font-size: 1.2rem;
             text-align: center;
+            margin: 0.5rem;
         }
         form {
             display: flex;
             align-items: center;
             flex-flow: column nowrap;
-            width: 80%;
             max-width: 500px;
-            input {
-                width: 100%;
+            p{
+              margin: 10px;
+              display: flex;
+              align-items: center;
+              flex-flow: column nowrap;
+              input{
                 border-radius: 0;
-                height: 50px;
+                width: 100%;
+              }
             }
-            button {
+            .wpcf7-submit{
                 @include btn;
                 box-shadow: none;
                 text-shadow: none;
                 padding: 0.5rem 3rem;
                 margin: 1rem;
+                height: 50px;
+                width: 230px;
             }
         }
     }
