--- a/themes/bix/sass/_donate.scss
+++ b/themes/bix/sass/_donate.scss
@@ -18,78 +18,74 @@
 		display: none;
 	}
 
-   .edd_price_options ul{
-   	max-width: 175px;
-   	margin: 0 auto;
-   }
+	.edd_price_options ul{
+		max-width: 175px;
+		margin: 0 auto;
+	}
+
 	button, input[type=button], input[type=reset], input[type=submit]{
 		text-shadow: none;
-
 	}
-   #edd-purchase-button, .edd-submit, input[type=submit].edd-submit{
-   	color: #fff;
-	  text-decoration: none;
-	  border: solid #fff 2px;
-	  border-radius: 30px;
-	  background-color: $color__blue;
-	  font-weight: 500;
-	  font-size: 1.1rem;
+
+	#edd-purchase-button, .edd-submit, input[type=submit].edd-submit{
+		color: #fff;
+		text-decoration: none;
+		border: solid #fff 2px;
+		border-radius: 30px;
+		background-color: $color__blue;
+		font-weight: 500;
+		font-size: 1.1rem;
 		width: 150px;
-	  transition: all ease 0.4s;
-	  margin-bottom: 20px;
-	  &:hover{
-	    color: $color__blue;
-	    border: solid $color__blue 2px;
-	    background-color: #fff;
-	  }
-   }
-   .edd_purchase_submit_wrapper,#edd_purchase_submit,.edd_purchase_receipt_files {
-   	text-align: center;
-   }
-   
-   .edd_download_file_link{
-   	color:#fff;
-   	font-size: 2.2rem;
-   	padding: 10px;
-   	background-color: $color__orange;
-   	border-radius: 10px;
-   	text-decoration: none;
-   	&:hover{
-   		background-color: $color__blue;
-   	}
-   }
-   p{
-   	color:$color__blue;
-   }
+		transition: all ease 0.4s;
+		margin-bottom: 20px;
+		&:hover{
+			color: $color__blue;
+			border: solid $color__blue 2px;
+			background-color: #fff;
+		}
+	}
+
+	.edd_purchase_submit_wrapper{
+		text-align: center;
+	}
+
+	.edd_download_file_link{
+		color:$color__orange;
+		font-size: 2.2rem;
+	}
+	
+	p{
+		color:$color__blue;
+	}
 }
 
 @media #{$tablet} {
-		.page-template-checkout{
-			.donations{
-				max-width: 500px;
-				margin: 0 auto;
-			}
+	.page-template-checkout{
+		.donations{
+			max-width: 500px;
+			margin: 0 auto;
 		}
 	}
+}
 
 @media #{$tablet-medium} {
-		.page-template-checkout{
-			.donations{
-				max-width: 80%;
-				margin: 0 auto;
-				border: solid 1px $color__gray;
-			}
-		}
-		.donate-title, p{
-			text-align: center;
+	.page-template-checkout{
+		.donations{
+			max-width: 80%;
+			margin: 0 auto;
+			border: solid 1px $color__gray;
 		}
 	}
+	.donate-title, p{
+		text-align: center;
+	}
+}
 
 @media #{$desktop} {
-		.page-template-checkout{
-			.donations{
-				max-width: 900px;
-				padding: 50px;
-			}
+	.page-template-checkout{
+		.donations{
+			max-width: 900px;
+			padding: 50px;
 		}
 	}
+}
