seperate and beautify code for modals

--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -75,4 +75,5 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "donate";
 @import "footer";
 @import "error-page";
-@import "modal";
+@import "bix-book-modals";
+@import "single-story-modals";
