add titles to sass files

--- a/themes/bix/sass/_bix-book-modals.scss
+++ b/themes/bix/sass/_bix-book-modals.scss
@@ -1,3 +1,7 @@
+/*--------------------------------------------------------------
+# Bix Book Page - Modals
+--------------------------------------------------------------*/
+
 // All Modal Properties
 	.bix-book-modal-overlay {
 		display: none;
