--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -1,3 +1,7 @@
+/*--------------------------------------------------------------
+# Bix Book Page
+--------------------------------------------------------------*/
+
 /* -------------- Top Section - Banner -------------*/
 	.bix-book-banner{
 		display: flex;
