--- a/themes/bix/sass/_donate.scss
+++ b/themes/bix/sass/_donate.scss
@@ -1,3 +1,8 @@
+/*--------------------------------------------------------------
+# Bix Book Page - Donation Process
+--------------------------------------------------------------*/
+
+
 .page-template-checkout{
 	article{
 		margin-top: 20px;
