--- a/themes/bix/sass/_footer.scss
+++ b/themes/bix/sass/_footer.scss
@@ -1,3 +1,7 @@
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+
 .footer-content-area {
 	background-color: #444444;
 	max-width: 100%;
