--- a/themes/bix/sass/_single-story-modals.scss
+++ b/themes/bix/sass/_single-story-modals.scss
@@ -1,3 +1,7 @@
+/*--------------------------------------------------------------
+# Single Story Page - Modals
+--------------------------------------------------------------*/
+
 .single-story-modal-overlay {
 	display: none;
 	position: fixed;
