--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
-# Single Story
+# Single Story Page
 --------------------------------------------------------------*/
 .single-story-site {
 	.stories-banner{
