--- a/themes/bix/sass/_stories.scss
+++ b/themes/bix/sass/_stories.scss
@@ -1,3 +1,7 @@
+/*--------------------------------------------------------------
+# Stories Page
+--------------------------------------------------------------*/
+
 /* ----------------- Top Section - Banner -------------*/
 .stories-banner{
 	display: flex;
