--- a/themes/bix/sass/_teaser-stories.scss
+++ b/themes/bix/sass/_teaser-stories.scss
@@ -1,3 +1,7 @@
+/*--------------------------------------------------------------
+# Teaser Stories Page
+--------------------------------------------------------------*/
+
 .teaser-banner{
 	display: flex;
 	flex-direction: column;
