--- a/themes/bix/sass/_flickity.scss
+++ b/themes/bix/sass/_flickity.scss
@@ -1,3 +1,7 @@
+/*--------------------------------------------------------------
+# Flickity Plugin
+--------------------------------------------------------------*/
+
 /*! Flickity v2.0.3
 http://flickity.metafizzy.co
 ---------------------------------------------- */
