--- a/themes/bix/sass/_front-page.scss
+++ b/themes/bix/sass/_front-page.scss
@@ -1,3 +1,6 @@
+/*--------------------------------------------------------------
+# Front Page
+--------------------------------------------------------------*/
 
 @import "front-sections/front-section-one";
 @import "front-sections/front-section-two";
