--- a/themes/bix/sass/_general.scss
+++ b/themes/bix/sass/_general.scss
@@ -1,3 +1,6 @@
+/*--------------------------------------------------------------
+# General
+--------------------------------------------------------------*/
 
 *{
 	box-size: border-box;
