--- a/themes/bix/sass/_mixins.scss
+++ b/themes/bix/sass/_mixins.scss
@@ -1,3 +1,7 @@
+/*--------------------------------------------------------------
+# Global Mixins
+--------------------------------------------------------------*/
+
 // Rem output with px fallback
 @mixin font-size($sizeValue: 1) {
 	font-size: ($sizeValue * 16) * 1px;
