--- a/themes/bix/sass/_footer.scss
+++ b/themes/bix/sass/_footer.scss
@@ -37,35 +37,60 @@
 }
 
 .form-position {
-	input{
+	form {
+		display: flex;
+	    flex-flow: column nowrap;
+	    align-items: center;
+	    .error {
+	    	color: white;
+	    	margin-top: 10px;
+	    }
+	    .ajax-loader{
+	    	display: none;
+	    }
+	}
+	.your-email, .your-message {
+		display: flex;
+	    flex-flow: column nowrap;
+	    align-items: center;
+	}
+	input.wpcf7-email{
 		width: 80%;
 		border: #F9AC31 solid 2px;
-		margin-bottom: 10px;
+		margin-top: 10px;
 		padding-left: 10px;
 	}
-	textarea {
+	textarea.wpcf7-textarea {
 		width: 80%;
 		height: 40vh;
 		border: #F9AC31 solid 2px;
 		padding-left: 10px;
-		margin-bottom: 20px;
+		margin-top: 20px;
+	}
+	input.wpcf7-submit {
+		@include btn;
+		font-size: 1rem;
+		width: 180px;
+		padding: 10px;
+		margin-top: 10px;
+		text-align: center;
+		box-shadow: none;
+		text-shadow: none;
+		&:hover {
+			box-shadow: none;
+			text-shadow: none;
+			border: 2px solid #fff;
+		}
+	}
+	.wpcf7-response-output {
+		background: white;
+		color: $color__gray;
+		border-color: $color__orange;
+		width: 80%;
 	}
 }
 
-.footer_button {
-	@include btn;
-	font-size: 1rem;
-	width: 180px;
-	padding: 10px;
-	text-align: center;
-	box-shadow: none;
-	text-shadow: none;
-	&:hover {
-		box-shadow: none;
-		text-shadow: none;
-		border: 2px solid #fff;
-	}
-}
+
 
 
 .icons {
