--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3004,20 +3004,41 @@ strong {
   color: #F9AC31;
   text-transform: uppercase; }
 
-.form-position input {
+.form-position form {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap;
+  -ms-flex-align: center;
+      align-items: center; }
+  .form-position form .error {
+    color: white;
+    margin-top: 10px; }
+  .form-position form .ajax-loader {
+    display: none; }
+
+.form-position .your-email, .form-position .your-message {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap;
+  -ms-flex-align: center;
+      align-items: center; }
+
+.form-position input.wpcf7-email {
   width: 80%;
   border: #F9AC31 solid 2px;
-  margin-bottom: 10px;
+  margin-top: 10px;
   padding-left: 10px; }
 
-.form-position textarea {
+.form-position textarea.wpcf7-textarea {
   width: 80%;
   height: 40vh;
   border: #F9AC31 solid 2px;
   padding-left: 10px;
-  margin-bottom: 20px; }
+  margin-top: 20px; }
 
-.footer_button {
+.form-position input.wpcf7-submit {
   color: #fff;
   text-decoration: none;
   border: solid #fff 2px;
@@ -3029,17 +3050,24 @@ strong {
   font-size: 1rem;
   width: 180px;
   padding: 10px;
+  margin-top: 10px;
   text-align: center;
   box-shadow: none;
   text-shadow: none; }
-  .footer_button:hover {
+  .form-position input.wpcf7-submit:hover {
     color: #70b3cb;
     border: solid #70b3cb 2px;
     background-color: #fff; }
-  .footer_button:hover {
+  .form-position input.wpcf7-submit:hover {
     box-shadow: none;
     text-shadow: none;
     border: 2px solid #fff; }
+
+.form-position .wpcf7-response-output {
+  background: white;
+  color: #444444;
+  border-color: #F9AC31;
+  width: 80%; }
 
 .icons {
   display: -ms-flexbox;
