fix js for footer comments, hide wpcf7 response output

--- a/themes/bix/sass/_footer.scss
+++ b/themes/bix/sass/_footer.scss
@@ -83,10 +83,11 @@
 		}
 	}
 	.wpcf7-response-output {
-		background: white;
-		color: $color__gray;
-		border-color: $color__orange;
-		width: 80%;
+		display: none !important;
+		// background: white;
+		// color: $color__gray;
+		// border-color: $color__orange;
+		// width: 80%;
 	}
 }
 
