--- a/themes/bix/sass/_footer.scss
+++ b/themes/bix/sass/_footer.scss
@@ -41,7 +41,7 @@
 		display: flex;
 	    flex-flow: column nowrap;
 	    align-items: center;
-	    .error {
+	    label.error {
 	    	color: white;
 	    	margin-top: 10px;
 	    }
