add padding to about page content

--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -75,6 +75,7 @@ h3 {
 	}
 
 	.author-section-content-wrapper {
+		padding: 0 10px;
 		div {
 			margin: 0;
 			h3 {
@@ -127,6 +128,7 @@ h3 {
 	}
 
 	.company-section-content-wrapper {
+		padding: 0 10px;
 		div {
 			margin: 0;
 			h3 {
