--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1039,25 +1039,27 @@ strong {
   .author-section-intro p:nth-child(2n) {
     font-style: italic; }
 
-.author-section-content-wrapper div {
-  margin: 0; }
-  .author-section-content-wrapper div h3 {
-    font-family: "Titillium Web", sans-serif;
-    color: #F9AC31;
-    text-transform: uppercase;
-    font-weight: 300; }
-  .author-section-content-wrapper div p {
-    font-weight: 300;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-flow: column nowrap;
-        flex-flow: column nowrap;
-    -ms-flex-pack: center;
-        justify-content: center;
-    display: block;
-    width: 100%; }
-    .author-section-content-wrapper div p span {
-      margin-bottom: 1rem; }
+.author-section-content-wrapper {
+  padding: 0 10px; }
+  .author-section-content-wrapper div {
+    margin: 0; }
+    .author-section-content-wrapper div h3 {
+      font-family: "Titillium Web", sans-serif;
+      color: #F9AC31;
+      text-transform: uppercase;
+      font-weight: 300; }
+    .author-section-content-wrapper div p {
+      font-weight: 300;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+      -ms-flex-pack: center;
+          justify-content: center;
+      display: block;
+      width: 100%; }
+      .author-section-content-wrapper div p span {
+        margin-bottom: 1rem; }
 
 .company-section {
   width: 100%;
@@ -1082,47 +1084,49 @@ strong {
     font-size: 1.5rem;
     text-transform: uppercase; }
 
-.company-section-content-wrapper div {
-  margin: 0; }
-  .company-section-content-wrapper div h3 {
-    font-family: "Titillium Web", sans-serif;
-    color: #F9AC31;
-    text-transform: uppercase;
-    font-weight: 300; }
-  .company-section-content-wrapper div ul {
-    margin-top: 0;
-    padding: 0 1rem;
-    font-weight: 300;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-flow: column nowrap;
-        flex-flow: column nowrap;
-    -ms-flex-pack: center;
-        justify-content: center;
-    list-style: none; }
-    .company-section-content-wrapper div ul li {
-      line-height: 1.2rem; }
-    .company-section-content-wrapper div ul li:before {
-      content: "";
-      border-color: transparent #444444;
-      border-style: solid;
-      border-width: 0.35em 0 0.35em 0.45em;
-      display: block;
-      height: 0;
-      width: 0;
-      left: -1em;
-      top: 0.9em;
-      position: relative; }
-  .company-section-content-wrapper div p {
-    font-weight: 300;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-flow: column nowrap;
-        flex-flow: column nowrap;
-    -ms-flex-pack: center;
-        justify-content: center; }
-    .company-section-content-wrapper div p span {
-      margin-bottom: 1rem; }
+.company-section-content-wrapper {
+  padding: 0 10px; }
+  .company-section-content-wrapper div {
+    margin: 0; }
+    .company-section-content-wrapper div h3 {
+      font-family: "Titillium Web", sans-serif;
+      color: #F9AC31;
+      text-transform: uppercase;
+      font-weight: 300; }
+    .company-section-content-wrapper div ul {
+      margin-top: 0;
+      padding: 0 1rem;
+      font-weight: 300;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+      -ms-flex-pack: center;
+          justify-content: center;
+      list-style: none; }
+      .company-section-content-wrapper div ul li {
+        line-height: 1.2rem; }
+      .company-section-content-wrapper div ul li:before {
+        content: "";
+        border-color: transparent #444444;
+        border-style: solid;
+        border-width: 0.35em 0 0.35em 0.45em;
+        display: block;
+        height: 0;
+        width: 0;
+        left: -1em;
+        top: 0.9em;
+        position: relative; }
+    .company-section-content-wrapper div p {
+      font-weight: 300;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+      -ms-flex-pack: center;
+          justify-content: center; }
+      .company-section-content-wrapper div p span {
+        margin-bottom: 1rem; }
 
 .company-section-clients {
   margin: 1rem 2rem; }
