--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -16,7 +16,7 @@
 			justify-content: space-between;
 			border-bottom: solid 1px rgba(0,0,0,0.2);
 			position: fixed;
-			width: 100vw;
+			width: 100%;
 			max-width: 100%;
 			z-index: 1;
 			background: rgba(255,255,255,1);
