--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -528,7 +528,7 @@ textarea {
         justify-content: space-between;
     border-bottom: solid 1px rgba(0, 0, 0, 0.2);
     position: fixed;
-    width: 100vw;
+    width: 100%;
     max-width: 100%;
     z-index: 1;
     background: white; }
