--- a/themes/bix/sass/front-page-sections/_front-section-one.scss
+++ b/themes/bix/sass/front-page-sections/_front-section-one.scss
@@ -16,14 +16,14 @@
 	}
 }
 .banner-info-wrapper{
-  min-height: 430px;
+  min-height: 400px;
   margin-top: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
     .site-logo{
-      max-width: 250px;
+      max-width: 150px;
       height: auto;
       margin-bottom:-10px;
       margin-top: 40px;
@@ -33,7 +33,7 @@
     font-weight: bold;
     font-family: $font__header;
     letter-spacing: 1px;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     color: #fff;
     margin-bottom:15px;
   }
@@ -64,6 +64,15 @@
 @media #{$tablet-medium}{
   .home-banner{
     background: url(../../images/bix_book_homepage_lg.jpg) no-repeat center top;
+  }
+    .banner-info-wrapper{
+      min-height: 400px;
+      .site-logo{
+        max-width: 220px;
+      }
+    .bix-book-title{
+      font-size: 1.8rem;
+    }
   }
 }
 
