--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -206,7 +206,7 @@
 		}
 
 		.menu-main-menu-container {
-			flex: 0 0 75%;
+			flex: 0 0 100%;
 			width: auto;
 			height: auto;
 			background: none;
@@ -226,14 +226,14 @@
 		}
 
 		li {
-			flex: 0 0 33.3%;
+			flex: 0 0 25%;
 			border-top: solid 10px rgba(0,0,0,0);
 			text-align: center;
 			margin: 0;
 			padding: 9.5px 0;
 
 			&:first-child {
-				display: none;
+				// display: none;
 			}
 			
 			&.current-menu-item {
