left align text on homepage

--- a/themes/bix/sass/_variables.scss
+++ b/themes/bix/sass/_variables.scss
@@ -23,6 +23,10 @@ $color__blue: #70b3cb;
 $color__orange: #F9AC31;
 $color__gray: #444444;
 
+// Revision 1 colors
+$grey_button: #9d9d9d;
+$grey_link: #3f4042;
+
 // Bix Typography
 
 $font__main: 'Roboto', sans-serif;
